# x4MP

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
.cursor/rules/: agent.mdc  ci-and-harness.mdc  data-safety.mdc  event-protocol.mdc  git-commits.mdc  inline-documentation.mdc  observability-debugging.mdc  plan-execution.mdc  regression-testing.mdc  session-save-safety.mdc  websocket-error-shape.mdc  x4-extension-mod.mdc  x4mp-architecture.mdc
.cursor/rules/rust/: no-allow-dead-code.mdc
.cursor/skills/adding-replication-event/: SKILL.md
.cursor/skills/authoring-x4-md-lua-hooks/: SKILL.md
.cursor/skills/debugging-desync/: SKILL.md
.github/workflows/: ci.yml
bridge/: Cargo.toml
bridge/src/: lib.rs  main.rs  named_pipe_win.rs  offline_buffer.rs  pipe.rs  ws_client.rs
bridge/tests/: ws_roundtrip.rs
docker/: Dockerfile  README.md
docs/superpowers/notes/: spike-decision.md  spike-q1-capture.md  spike-q2-apply.md  spike-q3-divergence.md
docs/superpowers/plans/: 2025-06-21-m0-scaffold-and-pipe-echo.md  2025-06-21-m0.5-replay-and-debug-bundles.md  2025-06-21-m0.75-x4-feasibility-spike.md  2025-06-21-m4-economy-replication.md  2025-06-21-m5-active-sector-npc-sync.md
docs/superpowers/specs/: 2025-06-21-x4-multiplayer-design.md
extension/: content.xml
extension/spike/: README.md  content.xml
extension/spike/md/: x4mp_spike_apply.xml  x4mp_spike_capture.xml  x4mp_spike_menu.xml  x4mp_spike_worldsnap.xml
extension/spike/ui/: ui.xml  x4mp_spike_apply.lua  x4mp_spike_capture.lua  x4mp_spike_pipe.lua
extension/ui/: ui.xml  x4mp_debug_overlay.lua  x4mp_init.lua
proto/: Cargo.toml
proto/schema/: handshake.ack.schema.json  handshake.schema.json  session.ping.schema.json
proto/src/: envelope.rs  error.rs  handshake.rs  lib.rs
proto/src/events/: mod.rs
proto/tests/: fixtures_test.rs
proto/tests/fixtures/: handshake.ack.json  handshake.json  session.ping.json
server/: Cargo.toml
server/src/: debug_bundle.rs  event_log.rs  lib.rs  main.rs  session.rs  tracing_util.rs  ws.rs
server/tests/: debug_bundle.rs  two_client_harness.rs  ws_echo.rs  ws_handshake.rs
tools/: dev-echo.ps1
tools/dev-stack/: env.example  permissions.json  setup-pipe-server.ps1  start-host.ps1  start-server.ps1  stop-server.ps1  sync-mod.ps1
tools/replay/: Cargo.toml  README.md
tools/replay/src/: divergence.rs  lib.rs  main.rs
tools/replay/tests/: replay_integration.rs
tools/spike-feeder/: Cargo.toml
tools/spike-feeder/fixtures/: sample_capture.ndjson
tools/spike-feeder/src/: main.rs
