[workspace]
resolver = "2"
members = ["proto", "server", "bridge", "tools/replay"]
exclude = ["tools/spike-feeder"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["X4MP Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
