[package]
name = "x4mp-bridge"
version.workspace = true
edition.workspace = true

[lib]
name = "x4mp_bridge"
path = "src/lib.rs"

[[bin]]
name = "x4mp-bridge"
path = "src/main.rs"

[dependencies]
x4mp-proto = { path = "../proto" }
futures-util = "0.3"
tokio-tungstenite = "0.26"
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
x4mp-server = { path = "../server" }
futures-util = "0.3"
tokio-tungstenite = "0.26"
serde_json.workspace = true
uuid.workspace = true
