[package]
name = "x4mp-replay"
version.workspace = true
edition.workspace = true

[[bin]]
name = "x4mp-replay"
path = "src/main.rs"

[lib]
name = "x4mp_replay"
path = "src/lib.rs"

[dependencies]
x4mp-proto = { path = "../../proto" }
x4mp-server = { path = "../../server" }
clap.workspace = true
futures-util = "0.3"
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.26"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
x4mp-server = { path = "../../server" }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde_json.workspace = true
uuid.workspace = true
