[package]
name = "x4mp-spike-feeder"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "x4mp-spike-feeder"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-std", "io-util"] }
